Bug 358871 - Plasma crashed - composition has problems
Summary: Plasma crashed - composition has problems
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.5.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: drkonqi
: 359490 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-01 14:17 UTC by Tom Kijas
Modified: 2016-03-02 10:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Kijas 2016-02-01 14:17:36 UTC
Application: plasmashell (5.5.3)

Qt Version: 5.5.1
Operating System: Linux 4.2.0-25-generic x86_64
Distribution: Ubuntu 15.10

-- Information about the crash:
- What I was doing when the application crashed:
I clicked on menu launcher (Dashboard) and plasma crashed
- Unusual behavior I noticed:
It seems there is problem with compositing, with EGL the screen sometimes does not refresh and with XGL it flickers, only way is to use XRender.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fbc73112800 (LWP 1283))]

Thread 8 (Thread 0x7fbc5e67a700 (LWP 1290)):
#0  0x00007fbc6d8148dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fbc718e2bd2 in _xcb_conn_wait (__timeout=-1, __nfds=1, __fds=0x7fbc5e679cc0) at /usr/include/x86_64-linux-gnu/bits/poll2.h:46
#2  0x00007fbc718e2bd2 in _xcb_conn_wait (c=c@entry=0xcd7eb0, cond=cond@entry=0xcd7ef0, vector=vector@entry=0x0, count=count@entry=0x0) at ../../src/xcb_conn.c:459
#3  0x00007fbc718e474f in xcb_wait_for_event (c=0xcd7eb0) at ../../src/xcb_in.c:623
#4  0x00007fbc607c37e9 in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#5  0x00007fbc6df0aa6e in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fbc6cff66aa in start_thread (arg=0x7fbc5e67a700) at pthread_create.c:333
#7  0x00007fbc6d81feed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7fbc57de7700 (LWP 1336)):
#0  0x00007fbc6a5d0e15 in g_thread_self () at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gthread.c:991
#1  0x00007fbc6a5a916c in g_main_context_acquire (context=0x7fbc50000990) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3209
#2  0x00007fbc6a5aa0a5 in g_main_context_iterate (context=context@entry=0x7fbc50000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3790
#3  0x00007fbc6a5aa2fc in g_main_context_iteration (context=0x7fbc50000990, may_block=1) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3901
#4  0x00007fbc6e14250b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fbc6e0e950a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fbc6df05ac4 in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fbc707b3c35 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#8  0x00007fbc6df0aa6e in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fbc6cff66aa in start_thread (arg=0x7fbc57de7700) at pthread_create.c:333
#10 0x00007fbc6d81feed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7fbc4c617700 (LWP 1340)):
#0  0x00007fbc6a5ee869 in g_mutex_lock (mutex=mutex@entry=0x7fbc44000990) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gthread-posix.c:1338
#1  0x00007fbc6a5aa2e8 in g_main_context_iteration (context=0x7fbc44000990, may_block=1) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3900
#2  0x00007fbc6e14250b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007fbc6e0e950a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fbc6df05ac4 in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fbc707b3c35 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#6  0x00007fbc6df0aa6e in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fbc6cff66aa in start_thread (arg=0x7fbc4c617700) at pthread_create.c:333
#8  0x00007fbc6d81feed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7fbc4a76f700 (LWP 1346)):
#0  0x00007fbc6d8148dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fbc6a5aa1ec in g_main_context_iterate (priority=2147483647, n_fds=1, fds=0x7fbc3c003070, timeout=<optimized out>, context=0x7fbc3c000990) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:4135
#2  0x00007fbc6a5aa1ec in g_main_context_iterate (context=context@entry=0x7fbc3c000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3835
#3  0x00007fbc6a5aa2fc in g_main_context_iteration (context=0x7fbc3c000990, may_block=1) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3901
#4  0x00007fbc6e14250b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fbc6e0e950a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fbc6df05ac4 in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fbc707b3c35 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#8  0x00007fbc6df0aa6e in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fbc6cff66aa in start_thread (arg=0x7fbc4a76f700) at pthread_create.c:333
#10 0x00007fbc6d81feed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7fbc48e06700 (LWP 1399)):
#0  0x00007fbc6cffbda0 in pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbc72b5c194 in  () at /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#2  0x00007fbc72b5c1d9 in  () at /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#3  0x00007fbc6cff66aa in start_thread (arg=0x7fbc48e06700) at pthread_create.c:333
#4  0x00007fbc6d81feed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7fbc423ca700 (LWP 1420)):
#0  0x00007fbc6d8148dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fbc6a5aa1ec in g_main_context_iterate (priority=2147483647, n_fds=1, fds=0x7fbbb8003120, timeout=<optimized out>, context=0x7fbbb8000990) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:4135
#2  0x00007fbc6a5aa1ec in g_main_context_iterate (context=context@entry=0x7fbbb8000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3835
#3  0x00007fbc6a5aa2fc in g_main_context_iteration (context=0x7fbbb8000990, may_block=1) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3901
#4  0x00007fbc6e14250b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fbc6e0e950a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fbc6df05ac4 in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fbc7113c2a6 in  () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#8  0x00007fbc6df0aa6e in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fbc6cff66aa in start_thread (arg=0x7fbc423ca700) at pthread_create.c:333
#10 0x00007fbc6d81feed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fbbaca1f700 (LWP 1622)):
#0  0x00007fbc6d81049d in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fbc6a5ed4e0 in g_wakeup_acknowledge (__nbytes=16, __buf=0x7fbbaca1eb80, __fd=<optimized out>) at /usr/include/x86_64-linux-gnu/bits/unistd.h:44
#2  0x00007fbc6a5ed4e0 in g_wakeup_acknowledge (wakeup=0x7fbbb8002570) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gwakeup.c:210
#3  0x00007fbc6a5a9cd4 in g_main_context_check (context=context@entry=0x7fbba8000990, max_priority=2147483647, fds=fds@entry=0x7fbba80048c0, n_fds=n_fds@entry=1) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3632
#4  0x00007fbc6a5aa190 in g_main_context_iterate (context=context@entry=0x7fbba8000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3837
#5  0x00007fbc6a5aa2fc in g_main_context_iteration (context=0x7fbba8000990, may_block=1) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3901
#6  0x00007fbc6e14250b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fbc6e0e950a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fbc6df05ac4 in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fbbaea80817 in KCupsConnection::run() () at /usr/lib/x86_64-linux-gnu/libkcupslib.so
#10 0x00007fbc6df0aa6e in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007fbc6cff66aa in start_thread (arg=0x7fbbaca1f700) at pthread_create.c:333
#12 0x00007fbc6d81feed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fbc73112800 (LWP 1283)):
[KCrash Handler]
#6  0x00007fbc40770d27 in TaskManager::ManualSortingStrategy::manualSortingRequest(TaskManager::AbstractGroupableItem*, int) (this=0x2de6f80, item=0x0, newIndex=-1) at ../../libtaskmanager/strategies/manualsortingstrategy.cpp:53
#7  0x00007fbc409c3ef1 in  () at /usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/plasma/private/taskmanager/libtaskmanagerplugin.so
#8  0x00007fbc409c4700 in  () at /usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/plasma/private/taskmanager/libtaskmanagerplugin.so
#9  0x00007fbc70771c49 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#10 0x00007fbc706f6cac in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#11 0x00007fbc706f84cc in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#12 0x00007fbc706f8cdd in QV4::QObjectMethod::callInternal(QV4::CallData*) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#13 0x00007fbc706fdb28 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#14 0x00007fbc6e11a777 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007fbc707191f1 in QQmlVMEMetaObject::metaCall(QMetaObject::Call, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#16 0x00007fbc70771c49 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#17 0x00007fbc706f6cac in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#18 0x00007fbc706f84cc in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#19 0x00007fbc706f8cdd in QV4::QObjectMethod::callInternal(QV4::CallData*) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#20 0x00007fbc7070f371 in QV4::Runtime::callActivationProperty(QV4::ExecutionEngine*, int, QV4::CallData*) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#21 0x00007fbc402b98fb in  ()
#22 0x0000000000000018 in  ()
#23 0x0003000000000001 in  ()
#24 0x0003000000000001 in  ()
#25 0xffffffffffffffff in  ()#26 0x0000000001191fd0 in  ()
#27 0x0000000001191fd0 in  ()
#28 0x0000000003980d90 in  ()
#29 0x00007fbc49770058 in  ()
#30 0x00007fbc49770060 in  ()
#31 0x00000000028aaae0 in  ()
#32 0x0000000001191fd0 in  ()
#33 0x00007fbc706afd5a in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#34 0x00007fbc7079900f in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#35 0x00007fbc7073f526 in QQmlBoundSignalExpression::evaluate(void**) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#36 0x00007fbc7073fddb in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#37 0x00007fbc7077c4be in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#38 0x00007fbc7071f08c in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#39 0x00007fbc6e11a1f0 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#40 0x00007fbc433e76c2 in  () at /usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/draganddrop/libdraganddropplugin.so
#41 0x00007fbc433e5c0c in  () at /usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/draganddrop/libdraganddropplugin.so
#42 0x00007fbc711cd878 in QQuickItem::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#43 0x00007fbc6ebf09dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#44 0x00007fbc6ebf5ea6 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#45 0x00007fbc6e0ebd7b in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#46 0x00007fbc711dc9cc in QQuickWindow::sendEvent(QQuickItem*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#47 0x00007fbc711e3abf in QQuickWindowPrivate::deliverDragEvent(QQuickDragGrabber*, QQuickItem*, QDragMoveEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#48 0x00007fbc711e3be5 in QQuickWindowPrivate::deliverDragEvent(QQuickDragGrabber*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#49 0x00007fbc711e44f3 in QQuickWindow::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#50 0x000000000044433b in PanelView::event(QEvent*) (this=0x13ea510, e=0x7ffefc861a60) at ../../shell/panelview.cpp:844
#51 0x00007fbc6ebf09dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#52 0x00007fbc6ebf5ea6 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#53 0x00007fbc6e0ebd7b in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#54 0x00007fbc6e42f961 in QGuiApplicationPrivate::processDrag(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#55 0x00007fbc6e41429d in QWindowSystemInterface::handleDrag(QWindow*, QMimeData const*, QPoint const&, QFlags<Qt::DropAction>) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#56 0x00007fbc607d0bbf in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#57 0x00007fbc607d336c in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#58 0x00007fbc6e422709 in QBasicDrag::eventFilter(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#59 0x00007fbc6e0eba32 in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#60 0x00007fbc6ebf0968 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#61 0x00007fbc6ebf5ea6 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#62 0x00007fbc6e0ebd7b in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#63 0x00007fbc6e42e5f1 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#64 0x00007fbc6e4302b5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#65 0x00007fbc6e414228 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#66 0x00007fbc607f50b0 in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#67 0x00007fbc6a5a9ff7 in g_main_context_dispatch (context=0x7fbc580016f0) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3154
#68 0x00007fbc6a5a9ff7 in g_main_context_dispatch (context=context@entry=0x7fbc580016f0) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3769
#69 0x00007fbc6a5aa250 in g_main_context_iterate (context=context@entry=0x7fbc580016f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3840
#70 0x00007fbc6a5aa2fc in g_main_context_iteration (context=0x7fbc580016f0, may_block=1) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3901
#71 0x00007fbc6e1424ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#72 0x00007fbc6e0e950a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#73 0x00007fbc6e422ac2 in QBasicDrag::drag(QDrag*) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#74 0x00007fbc6e43b619 in QDragManager::drag(QDrag*) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#75 0x00007fbc6e43a9f7 in QDrag::exec(QFlags<Qt::DropAction>, Qt::DropAction) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#76 0x00007fbc409c06d0 in  () at /usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/plasma/private/taskmanager/libtaskmanagerplugin.so
#77 0x00007fbc6e11b7b1 in QObject::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#78 0x00007fbc6ebf09dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#79 0x00007fbc6ebf5ea6 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#80 0x00007fbc6e0ebd7b in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#81 0x00007fbc6e0ee176 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#82 0x00007fbc6e1420e3 in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#83 0x00007fbc6a5a9ff7 in g_main_context_dispatch (context=0x7fbc580016f0) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3154
#84 0x00007fbc6a5a9ff7 in g_main_context_dispatch (context=context@entry=0x7fbc580016f0) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3769
#85 0x00007fbc6a5aa250 in g_main_context_iterate (context=context@entry=0x7fbc580016f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3840
#86 0x00007fbc6a5aa2fc in g_main_context_iteration (context=0x7fbc580016f0, may_block=1) at /build/glib2.0-ajuDY6/glib2.0-2.46.1/./glib/gmain.c:3901
#87 0x00007fbc6e1424ef in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#88 0x00007fbc6e0e950a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#89 0x00007fbc6e0f15ec in QCoreApplication::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#90 0x000000000043258a in main(int, char**) (argc=2, argv=<optimized out>) at ../../shell/main.cpp:179

Reported using DrKonqi
Comment 1 Bhushan Shah 2016-02-02 05:46:48 UTC
This looks like crash in libtaskmanager
Comment 2 Marco Martin 2016-02-24 13:40:14 UTC
*** Bug 359490 has been marked as a duplicate of this bug. ***
Comment 3 David Rosca 2016-03-02 10:45:00 UTC
Git commit 04fc22dc6e20a1ec3ff4e4ba5835418f721191b1 by David Rosca.
Committed on 02/03/2016 at 10:44.
Pushed by drosca into branch 'master'.

Fix crash on item move with manual sorting strategy

Summary:
Add nullptr check for item returned from getMemberById.

Reviewers: #plasma, hein

Reviewed By: hein

Subscribers: plasma-devel

Projects: #plasma

Differential Revision: https://phabricator.kde.org/D1049

M  +5    -1    applets/taskmanager/plugin/backend.cpp

http://commits.kde.org/plasma-desktop/04fc22dc6e20a1ec3ff4e4ba5835418f721191b1