Fix crash on item move with manual sorting strategy

Summary:
Add nullptr check for item returned from getMemberById.

BUG: 358871

Reviewers: #plasma, hein

Reviewed By: hein

Subscribers: plasma-devel

Projects: #plasma

Differential Revision: https://phabricator.kde.org/D1049